# oop-lab6

./: CMakeLists.txt  compile_commands.json
inc/: abstract_dineable.hpp  abstract_queue.hpp  abstract_refulable.hpp  car.hpp  car_semaphore.hpp  car_station.hpp  electric_station.hpp  gas_station.hpp  people_dinner.hpp  queue_queue.hpp  robot_dinner.hpp  test.hpp
src/: main.cpp
